<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:anna="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yuxuan.admin.expression.MainActivity">

    <com.yuxuan.admin.expression.view.MyViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </com.yuxuan.admin.expression.view.MyViewPager>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal" >

        <com.yuxuan.admin.expression.view.ChangeColorIconWithText
            android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            anna:icon="@drawable/ic_menu_start_conversation"
            anna:text="@string/tab_name"
            anna:text_size="12sp"
            anna:color="#ff45c0ff"  />

        <!--
        <view.ChangeColorIconWithText
            android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            anna:icon="@drawable/ic_menu_friendslist"
            anna:text="@string/tab_contact"
           anna:text_size="12sp"
            anna:color="#ff45c0" />
		-->



        <com.yuxuan.admin.expression.view.ChangeColorIconWithText
            android:id="@+id/id_indicator_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            anna:icon="@drawable/ic_menu_emoticons"
            anna:text="@string/tab_found"
            anna:text_size="12sp"
            anna:color="#ff45c0ff" />

        <com.yuxuan.admin.expression.view.ChangeColorIconWithText
            android:id="@+id/id_indicator_four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            anna:icon="@drawable/ic_menu_allfriends"
            anna:text="@string/tab_me"
            anna:text_size="12sp"
            anna:color="#ff45c0ff" />
    </LinearLayout>


</LinearLayout>
